--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,7 @@
   "description": "server for adi",
   "main": "index.js",
   "dependencies": {
+    "cors": "^2.8.4",
     "dotenv": "^5.0.1",
     "express": "^4.16.3",
     "express-graphql": "^0.6.12",
