--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
     "express": "^4.16.3",
     "express-graphql": "^0.6.12",
     "graphql": "^0.13.2",
+    "graphql-tools": "^3.0.1",
     "neo4j-driver": "^1.6.0"
   },
   "devDependencies": {},
