--- a/server/package.json
+++ b/server/package.json
@@ -4,18 +4,25 @@
   "description": "server for adi",
   "main": "index.js",
   "dependencies": {
+    "apollo-server-express": "^1.3.6",
+    "apollo-upload-server": "^5.0.0",
+    "body-parser": "^1.18.2",
     "cors": "^2.8.4",
     "dotenv": "^5.0.1",
     "express": "^4.16.3",
     "express-graphql": "^0.6.12",
     "graphql": "^0.13.2",
     "graphql-tools": "^3.0.1",
-    "neo4j-driver": "^1.6.0"
+    "neo4j-driver": "^1.6.0",
+    "shortid": "^2.2.8"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.6.1"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "babel-node index.js"
   },
   "author": "",
   "license": "ISC"
