--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "webpack-cli": "^2.1.3"
   },
   "dependencies": {
+    "@material-ui/icons": "^1.0.0-beta.43",
     "apollo-boost": "^0.1.6",
     "apollo-link": "^1.2.2",
     "apollo-upload-client": "^8.0.0",
