--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,9 @@
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
-    "webpack": "^4.7.0",
+    "css-loader": "^0.28.11",
+    "style-loader": "^0.21.0",
+    "webpack": "^4.8.1",
     "webpack-cli": "^2.1.3"
   },
   "dependencies": {
@@ -25,7 +27,8 @@
     "apollo-upload-client": "^8.0.0",
     "graphql": "^0.13.2",
     "graphql-tag": "^2.9.2",
-    "material-ui": "^1.0.0-beta.45",
+    "material-ui": "^1.0.0-beta.46",
+    "material-ui-next-upload": "^1.2.1",
     "react": "^16.3.2",
     "react-apollo": "^2.1.4",
     "react-dom": "^16.3.2"
