--- a/server/package.json
+++ b/server/package.json
@@ -8,6 +8,7 @@
     "apollo-upload-server": "^5.0.0",
     "body-parser": "^1.18.2",
     "cors": "^2.8.4",
+    "csv-parse": "^2.4.0",
     "dotenv": "^5.0.1",
     "express": "^4.16.3",
     "express-graphql": "^0.6.12",
