--- a/client/package.json
+++ b/client/package.json
@@ -2,8 +2,9 @@
   "name": "adi-client",
   "version": "1.0.0",
   "description": "frontend client for adi",
-  "main": "index.js",
+  "main": "webpack.config.js",
   "scripts": {
+    "start": "webpack-dev-server --mode development --inline --hotOnly",
     "test": "echo \"Error: no test specified\" && exit 1",
     "dist": "webpack"
   },
@@ -13,24 +14,29 @@
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
     "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-preset-env": "^1.6.1",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
+    "clean-webpack-plugin": "^0.1.19",
     "css-loader": "^0.28.11",
+    "html-webpack-plugin": "^3.2.0",
+    "react-hot-loader": "^4.3.3",
     "style-loader": "^0.21.0",
-    "webpack": "^4.8.1",
-    "webpack-cli": "^2.1.3"
+    "webpack": "^4.12.0",
+    "webpack-cli": "^2.1.5",
+    "webpack-dev-server": "^3.1.4"
   },
   "dependencies": {
-    "@material-ui/icons": "^1.0.0-beta.43",
-    "apollo-boost": "^0.1.6",
+    "@material-ui/core": "^1.2.1",
+    "@material-ui/icons": "^1.1.0",
+    "apollo-boost": "^0.1.9",
     "apollo-link": "^1.2.2",
     "apollo-upload-client": "^8.0.0",
     "graphql": "^0.13.2",
     "graphql-tag": "^2.9.2",
     "material-ui": "^1.0.0-beta.46",
     "material-ui-next-upload": "^1.2.1",
-    "react": "^16.3.2",
-    "react-apollo": "^2.1.4",
-    "react-dom": "^16.3.2"
+    "react": "^16.4.1",
+    "react-apollo": "^2.1.5",
+    "react-dom": "^16.4.1"
   }
 }
