--- a/client/package.json
+++ b/client/package.json
@@ -37,6 +37,7 @@
     "material-ui-next-upload": "^1.2.1",
     "react": "^16.4.1",
     "react-apollo": "^2.1.5",
+    "react-chart-editor": "^0.17.1",
     "react-dom": "^16.4.1"
   }
 }
