--- a/server/package.json
+++ b/server/package.json
@@ -7,14 +7,20 @@
     "apollo-server-express": "^1.3.6",
     "apollo-upload-server": "^5.0.0",
     "body-parser": "^1.18.2",
+    "connect-flash": "^0.1.1",
+    "cookie-parser": "^1.4.3",
     "cors": "^2.8.4",
     "csv-parse": "^2.4.0",
     "dotenv": "^5.0.1",
     "express": "^4.16.3",
     "express-graphql": "^0.6.12",
+    "express-session": "^1.15.6",
     "graphql": "^0.13.2",
     "graphql-tools": "^3.0.1",
+    "morgan": "^1.9.0",
     "neo4j-driver": "^1.6.0",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "shortid": "^2.2.8"
   },
   "devDependencies": {
