--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "react-hot-loader": "^4.3.3",
     "style-loader": "^0.21.0",
     "webpack": "^4.12.0",
+    "webpack-bundle-analyzer": "^2.13.1",
     "webpack-cli": "^2.1.5",
     "webpack-dev-server": "^3.1.4"
   },
@@ -35,6 +36,7 @@
     "graphql-tag": "^2.9.2",
     "material-ui": "^1.0.0-beta.46",
     "material-ui-next-upload": "^1.2.1",
+    "ramda": "^0.25.0",
     "react": "^16.4.1",
     "react-apollo": "^2.1.5",
     "react-chart-editor": "^0.17.1",
