--- a/client/package.json
+++ b/client/package.json
@@ -4,9 +4,9 @@
   "description": "frontend client for adi",
   "main": "webpack.config.js",
   "scripts": {
-    "start": "webpack-dev-server --mode development --inline --hotOnly",
+    "start": "webpack-dev-server --config webpack.config.dev.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dist": "webpack"
+    "dist": "webpack --config webpack.config.prod.js"
   },
   "author": "",
   "license": "ISC",
@@ -24,12 +24,13 @@
     "webpack": "^4.12.0",
     "webpack-bundle-analyzer": "^2.13.1",
     "webpack-cli": "^2.1.5",
-    "webpack-dev-server": "^3.1.4"
+    "webpack-dev-server": "^3.1.4",
+    "webpack-merge": "^4.1.3"
   },
   "dependencies": {
-    "@material-ui/core": "^1.2.1",
+    "@material-ui/core": "^1.2.2",
     "@material-ui/icons": "^1.1.0",
-    "apollo-boost": "^0.1.9",
+    "apollo-boost": "^0.1.10",
     "apollo-link": "^1.2.2",
     "apollo-upload-client": "^8.0.0",
     "graphql": "^0.13.2",
@@ -38,7 +39,7 @@
     "material-ui-next-upload": "^1.2.1",
     "ramda": "^0.25.0",
     "react": "^16.4.1",
-    "react-apollo": "^2.1.5",
+    "react-apollo": "^2.1.6",
     "react-chart-editor": "^0.17.1",
     "react-dom": "^16.4.1",
     "react-plotly.js": "^2.2.0"
