--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "webpack-dev-server --config webpack.config.dev.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dist": "webpack --config webpack.config.prod.js"
+    "dist": "webpack --config webpack.config.prod.js -p --define process.env.NODE_ENV='production' --mode production"
   },
   "author": "",
   "license": "ISC",
@@ -28,14 +28,14 @@
     "webpack-merge": "^4.1.3"
   },
   "dependencies": {
-    "@material-ui/core": "^1.2.2",
+    "@material-ui/core": "^1.2.3",
     "@material-ui/icons": "^1.1.0",
     "apollo-boost": "^0.1.10",
+    "apollo-client": "^2.3.5",
     "apollo-link": "^1.2.2",
     "apollo-upload-client": "^8.0.0",
     "graphql": "^0.13.2",
     "graphql-tag": "^2.9.2",
-    "material-ui": "^1.0.0-beta.46",
     "material-ui-next-upload": "^1.2.1",
     "ramda": "^0.25.0",
     "react": "^16.4.1",
