--- a/server/package.json
+++ b/server/package.json
@@ -21,7 +21,8 @@
     "neo4j-driver": "^1.6.3",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
-    "shortid": "^2.2.13"
+    "shortid": "^2.2.13",
+    "wait-on": "^3.0.1"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
