--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-react": "^7.11.1",
+    "file-loader": "^2.0.0",
     "html-webpack-plugin": "^3.2.0",
     "react-hot-loader": "^4.3.4",
     "style-loader": "^0.21.0",
