explicitly set the UPLOADS_FOLDER env variable when using Docker

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,8 @@ services:
     volumes:
       - ./server:/usr/src/app
       - ./data/uploads:/mnt/data
+    environment:
+      - UPLOADS_FOLDER=/mnt/data
     networks:
       - default
   client:
