--- a/client/.babelrc
+++ b/client/.babelrc
@@ -1,5 +1,5 @@
 {
   "plugins": ["transform-class-properties", 
               "react-hot-loader/babel"],
-  "presets": ["env", "react"]
+  "presets": ["@babel/env", "@babel/react"]
 }
