--- a/client/package.json
+++ b/client/package.json
@@ -10,44 +10,45 @@
   },
   "author": "",
   "license": "ISC",
+  "private": true,
   "devDependencies": {
-    "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.5",
+    "@babel/core": "^7.1.0",
+    "@babel/preset-env": "^7.1.0",
+    "@babel/preset-react": "^7.0.0",
+    "babel-loader": "^8.0.2",
     "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.24.1",
     "clean-webpack-plugin": "^0.1.19",
-    "css-loader": "^0.28.11",
-    "eslint": "^5.5.0",
+    "css-loader": "^1.0.0",
+    "eslint": "^5.6.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-react": "^7.11.1",
     "file-loader": "^2.0.0",
     "html-webpack-plugin": "^3.2.0",
-    "react-hot-loader": "^4.3.4",
-    "style-loader": "^0.21.0",
-    "webpack": "^4.17.0",
-    "webpack-bundle-analyzer": "^2.13.1",
-    "webpack-cli": "^2.1.5",
-    "webpack-dev-server": "^3.1.5",
+    "react-hot-loader": "^4.3.10",
+    "style-loader": "^0.23.0",
+    "webpack": "^4.19.1",
+    "webpack-bundle-analyzer": "^3.0.2",
+    "webpack-cli": "^3.1.0",
+    "webpack-dev-server": "^3.1.8",
     "webpack-merge": "^4.1.4"
   },
   "dependencies": {
-    "@material-ui/core": "^1.5.1",
-    "@material-ui/icons": "^1.1.0",
-    "apollo-boost": "^0.1.14",
-    "apollo-client": "^2.4.0",
-    "apollo-link": "^1.2.2",
+    "@material-ui/core": "^3.1.0",
+    "@material-ui/icons": "^3.0.1",
+    "apollo-boost": "^0.1.16",
+    "apollo-client": "^2.4.2",
+    "apollo-link": "^1.2.3",
     "apollo-upload-client": "^8.1.0",
-    "graphql": "^0.13.2",
+    "graphql": "^14.0.2",
     "graphql-tag": "^2.9.2",
     "material-ui-next-upload": "^1.2.1",
     "ramda": "^0.25.0",
-    "react": "^16.4.2",
+    "react": "^16.5.2",
     "react-apollo": "^2.1.11",
-    "react-chart-editor": "^0.17.4",
-    "react-dom": "^16.4.2",
+    "react-chart-editor": "^0.30.0",
+    "react-dom": "^16.5.2",
     "react-plotly.js": "^2.2.0"
   }
 }
