--- a/server/package.json
+++ b/server/package.json
@@ -4,17 +4,18 @@
   "description": "server for adi",
   "main": "index.js",
   "dependencies": {
+    "@babel/node": "^7.0.0",
     "amqplib": "^0.5.2",
     "apollo-server-express": "^2.1.0",
     "body-parser": "^1.18.3",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.3",
     "cors": "^2.8.4",
-    "csv-parse": "^2.5.0",
-    "dotenv": "^5.0.1",
+    "csv-parse": "^3.0.0",
+    "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
-    "graphql": "^0.13.2",
+    "graphql": "^14.0.2",
     "morgan": "^1.9.0",
     "neo4j-driver": "^1.6.3",
     "passport": "^0.4.0",
@@ -23,8 +24,9 @@
     "wait-on": "^3.0.1"
   },
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
+    "@babel/cli": "^7.1.0",
+    "@babel/core": "^7.1.0",
+    "@babel/preset-env": "^7.1.0",
     "eslint": "^5.5.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-import": "^2.14.0",
