--- a/client/package.json
+++ b/client/package.json
@@ -40,6 +40,7 @@
     "apollo-boost": "^0.1.16",
     "apollo-client": "^2.4.2",
     "apollo-link": "^1.2.3",
+    "apollo-link-ws": "^1.0.9",
     "apollo-upload-client": "^8.1.0",
     "graphql": "^14.0.2",
     "graphql-tag": "^2.9.2",
@@ -49,6 +50,7 @@
     "react-apollo": "^2.1.11",
     "react-chart-editor": "^0.30.0",
     "react-dom": "^16.5.2",
-    "react-plotly.js": "^2.2.0"
+    "react-plotly.js": "^2.2.0",
+    "subscriptions-transport-ws": "^0.9.15"
   }
 }
