--- a/client/package.json
+++ b/client/package.json
@@ -49,6 +49,7 @@
     "react": "^16.5.2",
     "react-apollo": "^2.1.11",
     "react-chart-editor": "^0.30.0",
+    "react-cookie": "^3.0.4",
     "react-dom": "^16.5.2",
     "react-plotly.js": "^2.2.0",
     "subscriptions-transport-ws": "^0.9.15"
