--- a/server/package.json
+++ b/server/package.json
@@ -7,6 +7,7 @@
     "@babel/node": "^7.0.0",
     "amqplib": "^0.5.2",
     "apollo-server-express": "^2.1.0",
+    "bcrypt": "^3.0.1",
     "body-parser": "^1.18.3",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.3",
