--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,6 +24,7 @@ services:
       - UPLOADS_FOLDER=/mnt/data
     networks:
       - default
+    command: npm run devStart
   client:
     build: ./client
     ports:
@@ -50,6 +51,13 @@ services:
     command: /usr/src/app/main.py
   python-shell:
     build: ./services/python-worker
+    volumes:
+      - ./services/python-worker:/usr/src/app
+      - ./data/uploads:/mnt/data
+      - ./server/scripts:/mnt/scripts
+    environment:
+      - SCRIPT_ROOT=/mnt/scripts
+      - DATA_ROOT=/mnt/data
     networks:
       - default
     stdin_open: true
