--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
     "bcrypt": "^3.0.1",
     "body-parser": "^1.18.3",
     "connect-flash": "^0.1.1",
+    "connect-redis": "^3.4.0",
     "cookie-parser": "^1.4.3",
     "cors": "^2.8.4",
     "csv-parse": "^3.0.0",
