--- a/client/package.json
+++ b/client/package.json
@@ -45,6 +45,7 @@
     "graphql": "^14.0.2",
     "graphql-tag": "^2.9.2",
     "material-ui-next-upload": "^1.2.1",
+    "prop-types": "^15.6.2",
     "ramda": "^0.25.0",
     "react": "^16.5.2",
     "react-apollo": "^2.1.11",
