--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "express-session": "^1.15.6",
     "graphql": "^14.0.2",
     "lodash": "^4.17.11",
+    "mkdirp": "^0.5.1",
     "morgan": "^1.9.0",
     "neo4j-driver": "^1.6.3",
     "passport": "^0.4.0",
