--- a/client/package.json
+++ b/client/package.json
@@ -37,6 +37,7 @@
   "dependencies": {
     "@material-ui/core": "^3.1.0",
     "@material-ui/icons": "^3.0.1",
+    "@material-ui/lab": "^3.0.0-alpha.19",
     "apollo-boost": "^0.1.16",
     "apollo-client": "^2.4.2",
     "apollo-link": "^1.2.3",
@@ -48,6 +49,7 @@
     "prop-types": "^15.6.2",
     "ramda": "^0.25.0",
     "react": "^16.5.2",
+    "react-ace": "^6.2.0",
     "react-apollo": "^2.1.11",
     "react-chart-editor": "^0.30.0",
     "react-cookie": "^3.0.4",
