--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,7 +20,9 @@ services:
     volumes:
       - ./server:/usr/src/app
       - ./data/uploads:/mnt/data
+      - ./data/scripts:/mnt/scripts
     environment:
+      - SCRIPTS_FOLDER=/mnt/scripts
       - UPLOADS_FOLDER=/mnt/data
     networks:
       - default
@@ -44,7 +46,7 @@ services:
     volumes:
       - ./services/python-worker:/usr/src/app
       - ./data/uploads:/mnt/data
-      - ./server/scripts:/mnt/scripts
+      - ./data/scripts:/mnt/scripts
     environment:
       - SCRIPT_ROOT=/mnt/scripts
       - DATA_ROOT=/mnt/data
@@ -54,7 +56,7 @@ services:
     volumes:
       - ./services/python-worker:/usr/src/app
       - ./data/uploads:/mnt/data
-      - ./server/scripts:/mnt/scripts
+      - ./data/scripts:/mnt/scripts
     environment:
       - SCRIPT_ROOT=/mnt/scripts
       - DATA_ROOT=/mnt/data
