--- a/server/package.json
+++ b/server/package.json
@@ -42,7 +42,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "babel-node index.js",
-    "devStart": "nodemon --exec npm run start -- ./index.js"
+    "devStart": "nodemon --exec npm run start -- ./index.js",
+    "debug": "nodemon --inspect-brk=0.0.0.0:9222 --nolazy --exec npm run start -- ./index.js"
   },
   "author": "",
   "license": "ISC",
