--- a/server/package.json
+++ b/server/package.json
@@ -4,11 +4,11 @@
   "description": "server for adi",
   "main": "index.js",
   "dependencies": {
-    "@babel/node": "^7.0.0",
     "amqplib": "^0.5.2",
     "apollo-server-express": "^2.1.0",
     "bcrypt": "^3.0.1",
     "body-parser": "^1.18.3",
+    "config": "^2.0.1",
     "connect-flash": "^0.1.1",
     "connect-redis": "^3.4.0",
     "cookie-parser": "^1.4.3",
@@ -24,15 +24,19 @@
     "neo4j-driver": "^1.6.3",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
+    "pkgcloud": "^1.5.0",
     "shortid": "^2.2.13",
     "signal-exit": "^3.0.2",
+    "toml": "^2.3.3",
     "wait-on": "^3.0.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.1.0",
     "@babel/core": "^7.1.2",
+    "@babel/node": "^7.0.0",
     "@babel/preset-env": "^7.1.0",
     "babel-core": "^7.0.0-bridge.0",
+    "babel-eslint": "^10.0.1",
     "babel-jest": "^23.6.0",
     "eslint": "^5.5.0",
     "eslint-config-airbnb": "^17.1.0",
