--- a/services/python-worker/Dockerfile
+++ b/services/python-worker/Dockerfile
@@ -1,3 +1,7 @@
 FROM continuumio/anaconda3
 
-RUN pip install pika neo4j-driver bcrypt
+RUN pip install pika \
+                neo4j-driver \
+                bcrypt \
+                openstacksdk \
+                toml
