update to neo4j 3.4, mainly so we can handle dates properly

--- a/services/python-worker/Dockerfile
+++ b/services/python-worker/Dockerfile
@@ -1,3 +1,9 @@
 FROM continuumio/anaconda3
 
-RUN pip install pika neo4j-driver bcrypt
+RUN apt-get install gcc -y && \
+    pip install --upgrade pip && \
+    pip install pika \
+                neo4j-driver \
+                bcrypt \
+                openstacksdk \
+                toml
