allow scripts to be uploaded/accessed via object storage as well

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,8 +22,7 @@ services:
       - ./data/uploads:/mnt/data
       - ./data/scripts:/mnt/scripts
     environment:
-      - SCRIPTS_FOLDER=/mnt/scripts
-      - UPLOADS_FOLDER=/mnt/data
+      - DATA_FOLDER=/mnt/data
     networks:
       - default
     command: npm run devStart
@@ -48,7 +47,6 @@ services:
       - ./data/uploads:/mnt/data
       - ./data/scripts:/mnt/scripts
     environment:
-      - SCRIPT_ROOT=/mnt/scripts
       - DATA_ROOT=/mnt/data
       - STORAGE_TYPE=object
     command: /usr/src/app/main.py
