--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
   "dependencies": {
     "amqplib": "^0.5.2",
     "apollo-server-express": "^2.1.0",
-    "bcrypt": "^3.0.1",
+    "bcrypt": "^3.0.2",
     "body-parser": "^1.18.3",
     "config": "^2.0.1",
     "connect-flash": "^0.1.1",
@@ -17,6 +17,7 @@
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
+    "get-stream": "^4.1.0",
     "graphql": "^14.0.2",
     "lodash": "^4.17.11",
     "mkdirp": "^0.5.1",
