adding date picker component

--- a/client/package.json
+++ b/client/package.json
@@ -44,9 +44,11 @@
     "apollo-link": "^1.2.3",
     "apollo-link-ws": "^1.0.9",
     "apollo-upload-client": "^8.1.0",
+    "date-fns": "^2.0.0-alpha.16",
     "graphql": "^14.0.2",
     "graphql-tag": "^2.9.2",
     "material-ui-next-upload": "^1.2.1",
+    "material-ui-pickers": "^1.0.0-rc.17",
     "prop-types": "^15.6.2",
     "ramda": "^0.25.0",
     "react": "^16.5.2",
