--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,11 +8,14 @@ services:
     volumes:
       - ./data/neo4j/data:/data
       - ./data/neo4j/logs:/logs
+      - ./neo4j/plugins:/plugins
     networks:
       - default
     environment:
       NEO4J_dbms_memory_heap_maxSize: 2048
       NEO4J_dbms_memory_pagecache_size: 1048576
+      NEO4J_dbms_security_procedures_unrestricted: apoc.*
+      NEO4J_apoc_autoIndex_enabled: "true"
   server:
     build: ./server
     ports:
