--- a/client/package.json
+++ b/client/package.json
@@ -49,6 +49,7 @@
     "graphql-tag": "^2.9.2",
     "material-ui-next-upload": "^1.2.1",
     "material-ui-pickers": "^1.0.0-rc.17",
+    "material-ui-search-bar": "^1.0.0-beta.13",
     "prop-types": "^15.6.2",
     "ramda": "^0.25.0",
     "react": "^16.5.2",
