Add apt-get update so that modules actually import on first-time installations

--- a/services/python-worker/Dockerfile
+++ b/services/python-worker/Dockerfile
@@ -1,6 +1,7 @@
 FROM continuumio/anaconda3
 
-RUN apt-get install gcc -y && \
+RUN apt-get update && \
+    apt-get install gcc -y && \
     pip install --upgrade pip && \
     pip install pika \
                 neo4j-driver \
