--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,6 +26,7 @@ services:
       - ./server:/usr/src/app
       - ./data/uploads:/mnt/data
       - ./data/scripts:/mnt/scripts
+      - server_node_modules:/usr/src/app/node_modules
     environment:
       - DATA_FOLDER=/mnt/data
     networks:
@@ -37,6 +38,7 @@ services:
       - "8080:8080"
     volumes:
       - ./client:/usr/src/app
+      - client_node_modules:/usr/src/app/node_modules
     networks:
       - default
   queue:
@@ -72,3 +74,7 @@ services:
     image: redis:4.0
     networks:
       - default
+
+volumes:
+  server_node_modules:
+  client_node_modules:
