--- a/server/package.json
+++ b/server/package.json
@@ -25,6 +25,7 @@
     "morgan": "^1.9.0",
     "neo4j-driver": "^1.6.3",
     "passport": "^0.4.0",
+    "passport-headerapikey": "^1.1.0",
     "passport-local": "^1.0.0",
     "pkgcloud": "^1.5.0",
     "shortid": "^2.2.13",
