--- a/services/python-worker/Dockerfile
+++ b/services/python-worker/Dockerfile
@@ -8,3 +8,10 @@ RUN apt-get update && \
                 bcrypt \
                 openstacksdk \
                 toml
+
+WORKDIR /usr/src/app
+
+ADD build/wait-for-it.sh /
+ADD * ./
+
+CMD [ "/wait-for-it.sh", "queue:5672", "--", "./main.py"]
