--- a/client/package.json
+++ b/client/package.json
@@ -47,6 +47,7 @@
     "date-fns": "^2.0.0-alpha.16",
     "graphql": "^14.0.2",
     "graphql-tag": "^2.9.2",
+    "material-ui-chip-input": "^1.0.0-beta.8",
     "material-ui-next-upload": "^1.2.1",
     "material-ui-pickers": "^1.0.0-rc.17",
     "material-ui-search-bar": "^1.0.0-beta.13",
