--- a/config/development.toml.example
+++ b/config/development.toml.example
@@ -1,6 +1,5 @@
 [storage.object.creds]
 
-# provider = "openstack"
 username = "your-openstack-username"
 password = "your-openstack-password"
 region = "your-openstack-region-name"
@@ -11,25 +10,22 @@ authUrl = "https://your-auth-endpoint:5000"
 
 [storage.object.containers]
 
-datasets = "your-dev-datasets-container"
-scripts = "your-dev-scripts-container"
+datasets = "adi_datasets"
+scripts = "adi_scripts"
 
 [storage.legacy]
 
-dataRoot = /tmp/uploads
+dataRoot = "/mnt/data"
 
 [storage]
 
-# Can be "object" or "legacy". "object" is the default.
-# type = "object"
+# Can be "object" or "legacy"
+type = "object"
 
 [neo4j]
 
-# If not set, protocol, host, and port all have these defaults
-
-# protocol = "bolt"
-# host = "neo4j"
-# port = 7687
-
-username = "your-neo4j-username"
-password = "your-neo4j-password"
+protocol = "bolt"
+host = "neo4j"
+port = 7687
+username = "neo4j"
+password = "password"
