--- a/client/package.json
+++ b/client/package.json
@@ -44,6 +44,7 @@
     "apollo-link": "^1.2.3",
     "apollo-link-ws": "^1.0.9",
     "apollo-upload-client": "^8.1.0",
+    "autosuggest-highlight": "^3.1.1",
     "date-fns": "^2.0.0-alpha.16",
     "graphql": "^14.0.2",
     "graphql-tag": "^2.9.2",
@@ -57,6 +58,7 @@
     "react": "^16.5.2",
     "react-ace": "^6.2.0",
     "react-apollo": "^2.1.11",
+    "react-autosuggest": "^9.4.2",
     "react-chart-editor": "^0.30.0",
     "react-cookie": "^3.0.4",
     "react-d3-tree": "^1.11.0",
