Fix a pretty serious error that can bring down the ApolloServer with a bad request
The error is discussed here:
https://github.com/apollographql/apollo-upload-server/pull/2

It has been patched for a while in the upstream version of the library
Apollo Server 2 is using, so the workaround is to switch back to that
until the changes are pulled downstream.

--- a/server/package.json
+++ b/server/package.json
@@ -5,21 +5,22 @@
   "main": "index.js",
   "dependencies": {
     "amqplib": "^0.5.2",
-    "apollo-server-express": "^2.1.0",
+    "apollo-server-express": "^2.2.2",
     "bcrypt": "^3.0.2",
     "body-parser": "^1.18.3",
     "config": "^2.0.1",
     "connect-flash": "^0.1.1",
     "connect-redis": "^3.4.0",
     "cookie-parser": "^1.4.3",
-    "cors": "^2.8.4",
+    "cors": "^2.8.5",
     "csv-parse": "^3.0.0",
     "dotenv": "^6.0.0",
     "esm": "^3.0.84",
-    "express": "^4.16.3",
+    "express": "^4.16.4",
     "express-session": "^1.15.6",
     "get-stream": "^4.1.0",
     "graphql": "^14.0.2",
+    "graphql-upload": "^8.0.2",
     "lodash": "^4.17.11",
     "mkdirp": "^0.5.1",
     "morgan": "^1.9.0",
