--- a/client/package.json
+++ b/client/package.json
@@ -51,6 +51,7 @@
     "material-ui-chip-input": "^1.0.0-beta.8",
     "material-ui-next-upload": "^1.2.1",
     "material-ui-pickers": "^1.0.0-rc.17",
+    "material-ui-popup-state": "^1.0.1",
     "material-ui-search-bar": "^1.0.0-beta.13",
     "mdi-react": "^5.0.0",
     "prop-types": "^15.6.2",
