--- a/client/package.json
+++ b/client/package.json
@@ -27,7 +27,6 @@
     "eslint-plugin-react": "^7.11.1",
     "file-loader": "^2.0.0",
     "html-webpack-plugin": "^3.2.0",
-    "react-hot-loader": "^4.3.10",
     "style-loader": "^0.23.0",
     "webpack": "^4.19.1",
     "webpack-bundle-analyzer": "^3.0.2",
@@ -45,6 +44,7 @@
     "apollo-link": "^1.2.3",
     "apollo-link-ws": "^1.0.9",
     "apollo-upload-client": "^8.1.0",
+    "apollo-utilities": "^1.0.26",
     "autosuggest-highlight": "^3.1.1",
     "date-fns": "^2.0.0-alpha.16",
     "graphql": "^14.0.2",
@@ -64,6 +64,7 @@
     "react-cookie": "^3.0.4",
     "react-d3-tree": "^1.11.0",
     "react-dom": "^16.5.2",
+    "react-hot-loader": "^4.3.10",
     "react-plotly.js": "^2.2.0",
     "subscriptions-transport-ws": "^0.9.15"
   }
