--- a/deploy/stack.yml
+++ b/deploy/stack.yml
@@ -9,6 +9,8 @@ services:
       - neo4j_data:/data
     networks:
       - default
+    env_file:
+      - neo4j.env
     environment:
       NEO4J_dbms_memory_heap_maxSize: 2048
       NEO4J_dbms_memory_pagecache_size: 1048576
