--- a/client/package.json
+++ b/client/package.json
@@ -47,6 +47,7 @@
     "apollo-utilities": "^1.0.26",
     "autosuggest-highlight": "^3.1.1",
     "classnames": "^2.2.6",
+    "copy-webpack-plugin": "^4.6.0",
     "date-fns": "^2.0.0-alpha.16",
     "graphql": "^14.0.2",
     "graphql-tag": "^2.10.0",
