--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -58,6 +58,18 @@ services:
       - ./data/scripts:/mnt/scripts
     depends_on:
       - queue
+  manual:
+    build: ./manual
+    image: cybera/adi-manual:latest
+    ports:
+      - "3001:3001"
+      - "3002:3002"
+    networks:
+      - default
+    volumes:
+      - ./manual/src:/usr/src/app
+      - manual_node_modules:/usr/src/app/node_modules
+      - manual_gitbook_comp:/usr/src/app/_book
   redis:
     image: redis:4.0
     networks:
@@ -67,3 +79,5 @@ volumes:
   neo4j_data:
   server_node_modules:
   client_node_modules:
+  manual_node_modules:
+  manual_gitbook_comp:
