--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -70,6 +70,7 @@ services:
       - ./manual/src:/usr/src/app
       - manual_node_modules:/usr/src/app/node_modules
       - manual_gitbook_comp:/usr/src/app/_book
+    command: gitbook --port 3001 --lrport 3002 serve
   redis:
     image: redis:4.0
     networks:
