--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,7 @@
   "description": "server for adi",
   "main": "index.js",
   "dependencies": {
+    "amqp-connection-manager": "^2.3.0",
     "amqplib": "^0.5.2",
     "apollo-server-express": "^2.2.3",
     "bcrypt": "^3.0.2",
