fix auto-reload and update bin script to allow pdf/epub generation
The "fix" for auto-reload is basically to go back to the defaults, as at
least the live-reload custom port doesn't really work:

https://github.com/GitbookIO/plugin-livereload/pull/1

The bin/manual script also now needs "start" to start the server, as it's
now multi-purpose, also handling stopping the server and generating pdfs
and epubs.

Finally, the server shouldn't constantly re-install gitbook with every
run now.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -62,15 +62,16 @@ services:
     build: ./manual
     image: cybera/adi-manual:latest
     ports:
-      - "3001:3001"
-      - "3002:3002"
+      - "4000:4000"
+      - "35729:35729"
     networks:
       - default
     volumes:
       - ./manual/src:/usr/src/app
+      - ./manual/outputs:/usr/src/outputs
       - manual_node_modules:/usr/src/app/node_modules
       - manual_gitbook_comp:/usr/src/app/_book
-    command: gitbook --port 3001 --lrport 3002 serve
+    command: gitbook serve
   redis:
     image: redis:4.0
     networks:
