--- a/manual/Dockerfile
+++ b/manual/Dockerfile
@@ -2,11 +2,15 @@ FROM node:10
 
 WORKDIR /usr/src/app
 
+COPY ./src ./
+
+RUN apt-get update && \
+    apt-get install libglu1 libxcomposite-dev -y
+RUN wget -nv -O- https://download.calibre-ebook.com/linux-installer.sh | sh /dev/stdin
 RUN npm install gitbook-cli -g
+RUN gitbook install
 
-COPY . ./
-
-EXPOSE 3001
-EXPOSE 3002
+EXPOSE 4000
+EXPOSE 35729
 
 CMD [ "gitbook", "--port", "3001", "--lrport", "3002", "serve" ]
