--- a/server/package.json
+++ b/server/package.json
@@ -34,7 +34,8 @@
     "shortid": "^2.2.14",
     "signal-exit": "^3.0.2",
     "toml": "^2.3.3",
-    "wait-on": "^3.2.0"
+    "wait-on": "^3.2.0",
+    "winston": "^3.1.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.1.5",
