--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -58,6 +58,12 @@ services:
       - ./data/scripts:/mnt/scripts
     depends_on:
       - queue
+  tika:
+    image: logicalspark/docker-tikaserver
+    ports:
+      - "9998:9998"
+    networks:
+      - default
   manual:
     build: ./manual
     image: cybera/adi-manual:latest
