--- a/server/package.json
+++ b/server/package.json
@@ -28,6 +28,7 @@
     "mkdirp": "^0.5.1",
     "morgan": "^1.9.0",
     "neo4j-driver": "^1.7.2",
+    "p-wait-for": "^3.1.0",
     "passport": "^0.4.0",
     "passport-headerapikey": "^1.1.0",
     "passport-local": "^1.0.0",
