--- a/deploy/stack.yml
+++ b/deploy/stack.yml
@@ -1,7 +1,7 @@
 version: '3.3'
 services:
   neo4j:
-    image: cybera/adi-neo4j:latest
+    image: cybera/adi-neo4j:$TAG
     ports:
       - "7474:7474"
       - "7687:7687"
@@ -19,7 +19,7 @@ services:
       NEO4J_com_graphaware_runtime_enabled: "true"
       NEO4J_com_graphaware_module_UIDM_1: "com.graphaware.module.uuid.UuidBootstrapper"
   server:
-    image: cybera/adi-server:latest
+    image: cybera/adi-server:$TAG
     ports:
       - "3000:3000"
     configs:
@@ -37,7 +37,7 @@ services:
     networks:
       - default
   python-worker:
-    image: cybera/adi-python-worker:latest
+    image: cybera/adi-python-worker:$TAG
     configs:
       - source: production.toml
         target: /usr/src/app/config/development.toml
