add packages to communicate directly with redis

--- a/server/package.json
+++ b/server/package.json
@@ -7,6 +7,7 @@
     "amqp-connection-manager": "^2.3.0",
     "amqplib": "^0.5.2",
     "apollo-server-express": "^2.2.3",
+    "async-redis": "^1.1.7",
     "bcrypt": "^3.0.2",
     "body-parser": "^1.18.3",
     "config": "^2.0.2",
@@ -33,6 +34,7 @@
     "passport-headerapikey": "^1.1.0",
     "passport-local": "^1.0.0",
     "pkgcloud": "^1.6.0",
+    "redis": "^2.8.0",
     "shortid": "^2.2.14",
     "signal-exit": "^3.0.2",
     "subscriptions-transport-ws": "^0.9.15",
