Workers: Extract python worker code to common library
In preparation for adding the tika worker, we're splitting out the
storage and config code so it can be reused. We've also added a worker
helper to simplify setting up the queue listener. Finally a multi-stage
Dockerfile is used to support the new directory layout.

--- a/services/Dockerfile
+++ b/services/Dockerfile
@@ -1,17 +1,16 @@
-FROM continuumio/anaconda3:5.3.0
-
+FROM continuumio/anaconda3:5.3.0 as base
 RUN apt-get update && \
     apt-get install gcc -y && \
     pip install --upgrade pip && \
     pip install pika \
-                neo4j-driver \
-                bcrypt \
                 openstacksdk \
                 toml
-
-WORKDIR /usr/src/app
-
 ADD build/wait-for-it.sh /
-ADD . ./
-
+WORKDIR /usr/src/app
 CMD [ "/wait-for-it.sh", "-t", "60", "queue:5672", "--", "./main.py"]
+
+FROM base as python-worker
+RUN pip install neo4j-driver \
+                bcrypt
+ADD python-worker ./
+ADD common ./
