Datasets: Import documents as text files using tika
The tika worker will automatically import uploaded documents datasets to
text. This commit includes the workers code, docker configuration and
modifications to the document dataset model to use the new worker.

--- a/deploy/stack.yml
+++ b/deploy/stack.yml
@@ -48,6 +48,18 @@ services:
      - default
     depends_on:
       - queue
+  tika-worker:
+    image: cybera/adi-tika-worker:latest
+    configs:
+      - source: production.toml
+        target: /usr/src/app/config/development.toml
+    volumes:
+      - uploads:/mnt/data
+      - scripts:/mnt/scripts
+    networks:
+     - default
+    depends_on:
+      - queue
   redis:
     image: redis:4.0
     networks:
