--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -61,6 +61,21 @@ services:
       - ./data/scripts:/mnt/scripts
     depends_on:
       - queue
+  tika-worker:
+    build:
+      context: ./services
+      target: tika-worker
+    image: cybera/adi-tika-worker:latest
+    networks:
+      - default
+    volumes:
+      - ./services/tika-worker:/usr/src/app
+      - ./services/common:/usr/src/app/common
+      - ./config/development.toml:/usr/src/app/common/config/development.toml
+      - ./data/uploads:/mnt/data
+      - ./data/scripts:/mnt/scripts
+    depends_on:
+      - queue
   tika:
     image: logicalspark/docker-tikaserver
     ports:
