--- a/client/package.json
+++ b/client/package.json
@@ -12,64 +12,71 @@
   "license": "ISC",
   "private": true,
   "devDependencies": {
-    "@babel/core": "^7.1.0",
-    "@babel/preset-env": "^7.1.0",
+    "@babel/core": "^7.5.5",
+    "@babel/preset-env": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
-    "babel-eslint": "^10.0.1",
-    "babel-loader": "^8.0.2",
+    "ajv": "^6.10.2",
+    "babel-eslint": "^10.0.3",
+    "babel-loader": "^8.0.6",
     "babel-plugin-transform-class-properties": "^6.24.1",
-    "clean-webpack-plugin": "^0.1.19",
-    "copy-webpack-plugin": "^4.6.0",
-    "css-loader": "^1.0.0",
-    "eslint": "^5.6.0",
-    "eslint-config-airbnb": "^17.1.0",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-jsx-a11y": "^6.1.1",
-    "eslint-plugin-react": "^7.11.1",
-    "file-loader": "^2.0.0",
+    "clean-webpack-plugin": "^3.0.0",
+    "copy-webpack-plugin": "^5.0.4",
+    "css-loader": "^3.2.0",
+    "eslint": "^6.1.0",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.14.3",
+    "eslint-plugin-react-hooks": "^1.7.0",
+    "file-loader": "^4.2.0",
     "html-webpack-plugin": "^3.2.0",
-    "style-loader": "^0.23.0",
-    "webpack": "^4.19.1",
-    "webpack-bundle-analyzer": "^3.0.2",
-    "webpack-cli": "^3.1.0",
-    "webpack-dev-server": "^3.1.8",
-    "webpack-merge": "^4.1.4"
+    "style-loader": "^1.0.0",
+    "webpack": "^4.39.3",
+    "webpack-bundle-analyzer": "^3.4.1",
+    "webpack-cli": "^3.3.7",
+    "webpack-dev-server": "^3.8.0",
+    "webpack-merge": "^4.2.2"
   },
   "dependencies": {
-    "@babel/polyfill": "^7.0.0",
-    "@material-ui/core": "^3.1.2",
-    "@material-ui/icons": "^3.0.1",
-    "@material-ui/lab": "^3.0.0-alpha.19",
-    "apollo-boost": "^0.1.22",
-    "apollo-client": "^2.4.7",
-    "apollo-link": "^1.2.4",
-    "apollo-link-ws": "^1.0.10",
-    "apollo-upload-client": "^8.1.0",
-    "apollo-utilities": "^1.0.26",
+    "@babel/polyfill": "^7.4.4",
+    "@date-io/date-fns": "^1.3.9",
+    "@material-ui/core": "^4.3.0",
+    "@material-ui/icons": "^4.2.1",
+    "@material-ui/pickers": "^3.2.4",
+    "@material-ui/styles": "^4.3.3",
+    "@types/react": "^16.9.2",
+    "acorn": "^6.3.0",
+    "apollo-boost": "^0.4.4",
+    "apollo-client": "^2.6.4",
+    "apollo-link": "^1.2.12",
+    "apollo-link-ws": "^1.0.18",
+    "apollo-upload-client": "^11.0.0",
+    "apollo-utilities": "^1.3.2",
     "autosuggest-highlight": "^3.1.1",
     "classnames": "^2.2.6",
-    "date-fns": "^2.0.0-alpha.16",
-    "graphql": "^14.0.2",
-    "graphql-tag": "^2.10.0",
-    "material-ui-chip-input": "^1.0.0-beta.8",
-    "material-ui-next-upload": "^1.2.1",
+    "date-fns": "^2.0.0-beta.5",
+    "graphql": "^14.5.4",
+    "graphql-tag": "^2.10.1",
+    "keycode": "^2.2.0",
+    "lodash": "^4.17.15",
+    "material-ui-chip-input": "^1.0.0",
     "material-ui-pickers": "^1.0.0-rc.17",
     "material-ui-popup-state": "^1.0.1",
     "material-ui-search-bar": "^1.0.0-beta.13",
-    "mdi-react": "^5.0.0",
-    "prop-types": "^15.6.2",
-    "ramda": "^0.25.0",
-    "react": "^16.5.2",
-    "react-ace": "^7.0.2",
-    "react-apollo": "^2.3.2",
-    "react-autosuggest": "^9.4.2",
-    "react-chart-editor": "^0.30.0",
-    "react-cookie": "^3.0.4",
-    "react-d3-tree": "^1.11.0",
-    "react-dom": "^16.5.2",
-    "react-hot-loader": "^4.3.10",
-    "react-plotly.js": "^2.2.0",
-    "react-pluralize": "^1.4.1",
-    "subscriptions-transport-ws": "^0.9.15"
+    "mdi-react": "^5.5.0",
+    "prop-types": "^15.7.2",
+    "ramda": "^0.26.1",
+    "react": "^16.9.0",
+    "react-ace": "^7.0.4",
+    "react-apollo": "^3.0.1",
+    "react-autosuggest": "^9.4.3",
+    "react-chart-editor": "^0.38.1",
+    "react-cookie": "^4.0.1",
+    "react-d3-tree": "^1.14.2",
+    "react-dom": "^16.9.0",
+    "react-hot-loader": "^4.12.12",
+    "react-plotly.js": "^2.3.0",
+    "react-pluralize": "^1.6.3",
+    "subscriptions-transport-ws": "^0.9.16"
   }
 }
