Parameterize tika-worker images in docker-compose and stack yml files
As in the previous commits 'Parameterize docker-compose image tag' and
'Parameterize docker stack tag', parameterizing the tag we use here
allows us to dynamically specify it -- great for deploying from git to
staging.

--- a/deploy/stack.yml
+++ b/deploy/stack.yml
@@ -49,7 +49,7 @@ services:
     depends_on:
       - queue
   tika-worker:
-    image: cybera/adi-tika-worker:latest
+    image: cybera/adi-tika-worker:$TAG
     configs:
       - source: production.toml
         target: /usr/src/app/config/development.toml
