Reconfigure import statements so that nothing breaks with the new directory structure (hopefully)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,9 +4,5 @@
 
 {
     "editor.tabSize": 2,
-    "eslint.enable": true,
-    "eslint.workingDirectories": [
-        { "directory": "./client", "changeProcessCWD": true },
-        { "directory": "./server", "changeProcessCWD": true }
-    ],
+    "git.ignoreLimitWarning": true
 }
