--- a/client/package.json
+++ b/client/package.json
@@ -64,6 +64,7 @@
     "material-ui-popup-state": "^1.0.1",
     "material-ui-search-bar": "^1.0.0-beta.13",
     "mdi-react": "^5.5.0",
+    "plotly.js": "^1.49.4",
     "prop-types": "^15.7.2",
     "ramda": "^0.26.1",
     "react": "^16.9.0",
