Update settings.json to re-add what I accidentally removed

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,16 @@
 
 {
     "editor.tabSize": 2,
-    "git.ignoreLimitWarning": true
+    "git.ignoreLimitWarning": true,
+    "eslint.enable": true,
+    "eslint.workingDirectories": [	
+        { 
+            "directory": "./client", 
+            "changeProcessCWD": true 
+        },	
+        { 
+            "directory": "./server", 
+            "changeProcessCWD": true 
+        }	
+    ],
 }
