Only run tests when asked to, not on startup automatically
Because the docker-compose file runs the container, and the container
is a part of the composed set of services, the tests were actually
running on environment startup, as well as when asked to.

--- a/test/docker-compose.yml
+++ b/test/docker-compose.yml
@@ -69,6 +69,7 @@ services:
       - default
   test-runner:
     build: .
+    command: "true"
     image: cybera/adi-test-runner:latest
     volumes:
       - ./integration:/usr/src/app
