--- a/test/Dockerfile
+++ b/test/Dockerfile
@@ -2,6 +2,6 @@ FROM python:3
 
 WORKDIR /usr/src/app
 
-RUN pip install --no-cache-dir requests pandas
+RUN pip install --no-cache-dir requests pandas pytest
 
 CMD ["python", "./main.py"]
