--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
   "dependencies": {
     "amqp-connection-manager": "^2.3.0",
     "amqplib": "^0.5.2",
-    "apollo-server-express": "^2.2.3",
+    "apollo-server-express": "^2.9.3",
     "async-redis": "^1.1.7",
     "bcrypt": "^3.0.2",
     "body-parser": "^1.18.3",
@@ -23,12 +23,15 @@
     "express-session": "^1.15.6",
     "get-stream": "^4.1.0",
     "graphql": "^14.0.2",
+    "graphql-middleware": "^4.0.1",
+    "graphql-shield": "^6.1.0",
     "graphql-tools": "^4.0.3",
     "graphql-upload": "^8.0.2",
     "lodash": "^4.17.11",
     "mkdirp": "^0.5.1",
     "morgan": "^1.9.0",
     "neo4j-driver": "^1.7.2",
+    "object-hash": "^1.3.1",
     "p-wait-for": "^3.1.0",
     "passport": "^0.4.0",
     "passport-headerapikey": "^1.1.0",
