Modularize typedefs, rename /resolvers to /modules, and add an index.js to /modules
Add an index.js to the resolvers directory and then rename the directory to /modules

Modularize to the best of my knowledge

Update variable name from typedefs to typeDefs

It turns out I don't need merge, I just need an array to combine my typeDefs

--- a/server/package.json
+++ b/server/package.json
@@ -25,6 +25,7 @@
     "graphql": "^14.0.2",
     "graphql-middleware": "^4.0.1",
     "graphql-shield": "^6.1.0",
+    "graphql-tag": "^2.10.1",
     "graphql-tools": "^4.0.3",
     "graphql-upload": "^8.0.2",
     "lodash": "^4.17.11",
