Server: Fix eslint configuration for typescript and resolve issues
* Fix syntax error so eslint actually starts working again

* Disable no-undef check; it doesn't work well with interfaces and tsc
  should catch everything anyways

* Disable lines-between-class-members

* Disable maxlen

* Fix all code issues in typescript code that resulted from eslint
  working again

--- a/server/.eslintrc.json
+++ b/server/.eslintrc.json
@@ -15,17 +15,26 @@
   "env": {
     "jest": true
   },
+  "settings": {
+    "import/resolver": {
+      "node": {
+        "extensions": [".js", ".jsx", ".ts", ".tsx"]
+      }
+    }
+  },
   "rules": {
+    "no-undef": "off",
+    "max-len": "off",
     "comma-dangle": "off",
     "semi": "off",
     "no-underscore-dangle": "off",
-    "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
     "no-cond-assign": [2, "except-parens"],
     "no-else-return": ["error", { "allowElseIf": true }],
-    "@typescript-eslint/member-delimiter-style": {
+    "lines-between-class-members": "off",
+    "@typescript-eslint/member-delimiter-style": ["error", {
       "multiline": {
         "delimiter": "none"
       }
-    }
+    }]
   }
 }
