install python-adi in the test-runner

--- a/test/docker-compose.yml
+++ b/test/docker-compose.yml
@@ -73,6 +73,7 @@ services:
     image: cybera/adi-test-runner:latest
     volumes:
       - ./integration:/usr/src/app
+      - ./integration/pkg:/usr/src/pkg
 
 volumes:
   neo4j_data:
