install file-magic for tika as well
Oops. Didn't realize you could specify two different builds in a single
Dockerfile and missed the separate tika-worker one.

--- a/services/Dockerfile
+++ b/services/Dockerfile
@@ -18,6 +18,7 @@ ADD common ./common
 
 FROM base as tika-worker
 RUN apt-get install default-jre tesseract-ocr -y
+RUN pip install file-magic
 RUN wget https://www-eu.apache.org/dist/tika/tika-app-1.22.jar -O /tika-app.jar
 ADD tika-worker ./
 ADD common ./common
