--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,6 +1,7 @@
 {
     "compilerOptions": {
         "outDir": "./built",
+        "sourceMap": true,
         "allowJs": true,
         "target": "es6",
         "module": "commonjs",
