--- a/client/package.json
+++ b/client/package.json
@@ -54,6 +54,7 @@
     "apollo-utilities": "^1.3.2",
     "autosuggest-highlight": "^3.1.1",
     "classnames": "^2.2.6",
+    "clsx": "^1.0.4",
     "date-fns": "^2.0.0-beta.5",
     "graphql": "^14.5.4",
     "graphql-tag": "^2.10.1",
@@ -69,7 +70,7 @@
     "ramda": "^0.26.1",
     "react": "^16.9.0",
     "react-ace": "^7.0.4",
-    "react-apollo": "^3.0.1",
+    "react-apollo": "^3.1.3",
     "react-autosuggest": "^9.4.3",
     "react-chart-editor": "^0.38.1",
     "react-cookie": "^4.0.1",
