Eslint: Disable no-unused-vars check
Both tsserver and eslint report unused vars, creating extra noise when
fixing code problems.

--- a/server/.eslintrc.json
+++ b/server/.eslintrc.json
@@ -22,6 +22,7 @@
   },
   "rules": {
     "no-undef": "off",
+    "no-unused-vars": "off",
     "max-len": "off",
     "comma-dangle": "off",
     "semi": "off",
