--- a/server/.eslintrc.json
+++ b/server/.eslintrc.json
@@ -39,6 +39,7 @@
         "plugin:@typescript-eslint/recommended-requiring-type-checking"
       ],
       "rules": {
+        "@typescript-eslint/no-unused-vars": "off",
         "@typescript-eslint/member-delimiter-style": ["error", {
           "multiline": {
             "delimiter": "none"
