--- a/services/Dockerfile
+++ b/services/Dockerfile
@@ -19,6 +19,6 @@ ADD common ./common
 FROM base as tika-worker
 RUN apt-get install default-jre tesseract-ocr -y
 RUN pip install python-magic
-RUN wget https://www-eu.apache.org/dist/tika/tika-app-1.22.jar -O /tika-app.jar
+RUN wget https://www.apache.org/dyn/closer.cgi/tika/tika-app-1.22.jar -O /tika-app.jar
 ADD tika-worker ./
 ADD common ./common
