--- a/config/development.toml.example
+++ b/config/development.toml.example
@@ -3,6 +3,7 @@
 username = "your-openstack-username"
 password = "your-openstack-password"
 region = "your-openstack-region-name"
+tempUrlKey = "your-temp-url-key"
 # tenant or project name
 tenantName = "your-openstack-tenant-name"
 # you should not include the "/v2.0" path found in default openstack credentials
